--- a/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/Main.storyboard
+++ b/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pri-KJ-b3B">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hJS-yF-BOW">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -143,11 +143,15 @@
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ihc-Vr-nJw">
                                                     <rect key="frame" x="279" y="11" width="80" height="80"/>
+                                                    <color key="backgroundColor" red="0.096684671938419342" green="0.41346585750579834" blue="0.080857269465923309" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="XEH-mS-FuM"/>
                                                         <constraint firstAttribute="height" constant="80" id="v78-cK-7iQ"/>
                                                     </constraints>
-                                                    <state key="normal" title="Button"/>
+                                                    <state key="normal" title="Accept">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="50"/>
@@ -156,13 +160,16 @@
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CDl-8I-5PZ">
                                                     <rect key="frame" x="184" y="11" width="80" height="80"/>
+                                                    <color key="backgroundColor" systemColor="systemRedColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="Itt-xn-yhW"/>
                                                         <constraint firstAttribute="height" constant="80" id="P19-Ye-XTW"/>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Rka-Ib-p6I"/>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="etl-Hi-1Zb"/>
                                                     </constraints>
-                                                    <state key="normal" title="Button"/>
+                                                    <state key="normal" title="Reject">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="50"/>
@@ -456,20 +463,20 @@
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <prototypes>
                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="1w6-eZ-2W1">
-                                                            <rect key="frame" x="0.0" y="28" width="375" height="51.5"/>
+                                                            <rect key="frame" x="0.0" y="28" width="375" height="51"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1w6-eZ-2W1" id="DqR-eT-q6M">
-                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="51.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdR-hg-Bi4">
-                                                                        <rect key="frame" x="24" y="15" width="46" height="21.5"/>
+                                                                        <rect key="frame" x="24" y="15" width="46" height="21"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1300" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggr-Rf-vgy">
-                                                                        <rect key="frame" x="328" y="15" width="39" height="21.5"/>
+                                                                        <rect key="frame" x="328" y="15" width="39" height="21"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
@@ -746,16 +753,16 @@
             </objects>
             <point key="canvasLocation" x="2008.8" y="1112.2938530734634"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Food View Controller-->
         <scene sceneID="qJw-oG-d47">
             <objects>
-                <viewController id="hJS-yF-BOW" sceneMemberID="viewController">
+                <viewController id="hJS-yF-BOW" customClass="AddFoodViewController" customModule="JayasekaraJMSD_COBSCComp192p_012" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WeO-Zr-yAP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="579"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="eOG-nR-UIZ">
-                                <rect key="frame" x="0.0" y="20" width="375" height="444"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="474.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add New Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oi8-Sl-08W">
                                         <rect key="frame" x="126" y="0.0" width="123.5" height="24"/>
@@ -787,39 +794,45 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="faw-sa-oiH">
-                                        <rect key="frame" x="145" y="204" width="85" height="85"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="faw-sa-oiH">
+                                        <rect key="frame" x="145" y="205" width="85" height="82.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="85" id="dSp-cf-i0O"/>
                                             <constraint firstAttribute="width" constant="85" id="eLh-yG-Tqn"/>
                                         </constraints>
                                     </imageView>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Dm-IW-4V0">
-                                        <rect key="frame" x="50" y="304" width="275" height="40"/>
+                                        <rect key="frame" x="50" y="304" width="275" height="80"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="cRy-Wp-SXf"/>
+                                            <constraint firstAttribute="height" constant="80" id="cRy-Wp-SXf"/>
                                         </constraints>
                                     </pickerView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Discount" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xBX-oz-qXk">
-                                        <rect key="frame" x="70" y="359" width="235" height="40"/>
+                                        <rect key="frame" x="70" y="399" width="235" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="pqg-cd-fX3"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="nRc-km-cRI">
-                                        <rect key="frame" x="108.5" y="414" width="158.5" height="30"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="nRc-km-cRI">
+                                        <rect key="frame" x="125" y="454" width="125.5" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set is as item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1J-f8-dOa">
-                                                <rect key="frame" x="0.0" y="5" width="101.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="101.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9yc-yZ-ASf">
-                                                <rect key="frame" x="112.5" y="0.0" width="46" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9yc-yZ-ASf" customClass="CheckBox" customModule="JayasekaraJMSD_COBSCComp192p_012" customModuleProvider="target">
+                                                <rect key="frame" x="105.5" y="0.5" width="20" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="20" id="CaL-NR-zoq"/>
+                                                    <constraint firstAttribute="height" constant="20" id="Mt4-5D-sxZ"/>
+                                                </constraints>
+                                                <connections>
+                                                    <action selector="btnCheckBoxClick:" destination="hJS-yF-BOW" eventType="touchUpInside" id="B5S-Ll-awd"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -847,6 +860,9 @@
                                 <state key="normal" title="ADD +">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnClickAdd:" destination="hJS-yF-BOW" eventType="touchUpInside" id="W7y-Uz-uq3"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hUR-Yk-blK"/>
@@ -862,10 +878,19 @@
                             <constraint firstItem="hUR-Yk-blK" firstAttribute="bottom" secondItem="hwp-57-7Pt" secondAttribute="bottom" constant="40" id="rQd-L9-eGn"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="FoodImage" destination="faw-sa-oiH" id="ZpG-3U-SG0"/>
+                        <outlet property="btnAdd" destination="hwp-57-7Pt" id="G20-sM-F11"/>
+                        <outlet property="pvCategory" destination="7Dm-IW-4V0" id="VHx-y3-tAB"/>
+                        <outlet property="txtDescription" destination="aqJ-Vw-I5r" id="sgd-us-5IW"/>
+                        <outlet property="txtDiscount" destination="xBX-oz-qXk" id="44M-Ct-mFg"/>
+                        <outlet property="txtName" destination="tVp-7y-1sX" id="ERS-To-Mg1"/>
+                        <outlet property="txtPrice" destination="IdP-qy-0a7" id="uRG-oj-eC9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2cK-Tz-DQ9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2009" y="2669"/>
+            <point key="canvasLocation" x="2008.8" y="2668.5157421289359"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Cvl-fG-6Ae">
@@ -1031,6 +1056,7 @@
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="logo" width="96" height="96"/>
         <image name="phone" catalog="system" width="128" height="115"/>
+        <image name="photo" catalog="system" width="128" height="93"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
