--- a/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/Main.storyboard
+++ b/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hJS-yF-BOW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GHn-e5-dM1">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -660,10 +660,10 @@
             </objects>
             <point key="canvasLocation" x="2008.8" y="458.32083958020991"/>
         </scene>
-        <!--View Controller-->
+        <!--Category View Controller-->
         <scene sceneID="MsX-ht-ioy">
             <objects>
-                <viewController id="9Tc-Dh-lMT" sceneMemberID="viewController">
+                <viewController id="9Tc-Dh-lMT" customClass="CategoryViewController" customModule="JayasekaraJMSD_COBSCComp192p_012" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dit-oo-6HO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="579"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -689,12 +689,15 @@
                                 <state key="normal" title="ADD +">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnClickAdd:" destination="9Tc-Dh-lMT" eventType="touchUpInside" id="HTn-WQ-Ks6"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JzD-0r-b7y">
                                 <rect key="frame" x="0.0" y="209.5" width="375" height="369.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="63" id="ZbU-tg-rd8">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="63" id="ZbU-tg-rd8" customClass="CategoryTableViewCell" customModule="JayasekaraJMSD_COBSCComp192p_012" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="63"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZbU-tg-rd8" id="SFK-Lf-qaD">
@@ -702,32 +705,22 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category 01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hcm-Az-xpT">
-                                                    <rect key="frame" x="39" y="21" width="107" height="24"/>
+                                                    <rect key="frame" x="36" y="21" width="106.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="74e-op-t68">
-                                                    <rect key="frame" x="279" y="11" width="80" height="41"/>
-                                                    <color key="backgroundColor" systemColor="systemRedColor"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="oX0-40-DuM"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <state key="normal" title="DELETE">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </state>
-                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="74e-op-t68" firstAttribute="leading" secondItem="hcm-Az-xpT" secondAttribute="trailing" constant="133" id="0yh-5D-AN5"/>
-                                                <constraint firstItem="hcm-Az-xpT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="SFK-Lf-qaD" secondAttribute="leadingMargin" id="XyX-yd-618"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="74e-op-t68" secondAttribute="bottom" id="Zdz-7v-JKc"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="74e-op-t68" secondAttribute="trailing" id="b5E-OJ-Zjf"/>
-                                                <constraint firstItem="74e-op-t68" firstAttribute="top" secondItem="SFK-Lf-qaD" secondAttribute="topMargin" id="gZZ-ud-MqQ"/>
-                                                <constraint firstItem="hcm-Az-xpT" firstAttribute="top" secondItem="SFK-Lf-qaD" secondAttribute="topMargin" constant="10" id="zId-uq-Ee4"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="hcm-Az-xpT" secondAttribute="bottom" constant="10" id="6me-EC-2cs"/>
+                                                <constraint firstItem="hcm-Az-xpT" firstAttribute="leading" secondItem="SFK-Lf-qaD" secondAttribute="leadingMargin" constant="20" id="8Ye-Np-ANg"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="hcm-Az-xpT" secondAttribute="trailing" constant="213" id="Ezf-LG-PQA"/>
+                                                <constraint firstItem="hcm-Az-xpT" firstAttribute="top" secondItem="SFK-Lf-qaD" secondAttribute="topMargin" constant="10" id="cmd-cH-eXl"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblCategoryName" destination="hcm-Az-xpT" id="FXT-8h-lXC"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -748,6 +741,10 @@
                             <constraint firstItem="U4c-Zs-yNi" firstAttribute="centerX" secondItem="Dit-oo-6HO" secondAttribute="centerX" id="jHo-td-4rR"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tblCategoryView" destination="JzD-0r-b7y" id="Nv5-hW-ByE"/>
+                        <outlet property="txtCategory" destination="mNC-bJ-ot1" id="iDu-Hy-7vc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lb6-1K-vFZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
