--- a/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/Main.storyboard
+++ b/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rg8-lh-cOJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -28,6 +28,7 @@
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xAL-jf-7Iy">
                                                 <rect key="frame" x="0.0" y="0.0" width="295" height="50"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="emailtext"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="Lod-e3-0Jp"/>
                                                 </constraints>
@@ -36,6 +37,7 @@
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q2Z-Bf-AWo">
                                                 <rect key="frame" x="0.0" y="67" width="295" height="50"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="pwdtext"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="zRv-0d-X05"/>
                                                 </constraints>
@@ -47,6 +49,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfR-9m-mFx">
                                         <rect key="frame" x="100" y="263" width="135" height="45"/>
                                         <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="loginbtn"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="JLb-pJ-vUA"/>
                                         </constraints>
